add java arguments to manage memory inside docker container